Overlap fix

--- a/src/App.css
+++ b/src/App.css
@@ -4136,3 +4136,52 @@ form#imageForm{
     height: 100px;
   }
 }
+
+/* Friend Form Css */
+.no-suggestions {
+  color: #999;
+  padding: 0.5rem;
+}
+
+.autocomplete input {
+  width: calc(300px + 1rem);
+}
+
+.autocomplete {
+  min-height: 165px;
+}
+
+.suggestions {
+  border: 1px solid #999;
+  border-top-width: 0;
+  list-style: none;
+  margin-top: 0;
+  max-height: 143px;
+  overflow-y: auto;
+  padding-left: 0;
+  width: calc(300px + 1rem);
+
+  display: inline-block;
+  position: relative;
+}
+
+.suggestions li {
+  padding: 0.5rem;
+}
+
+.suggestion-active,
+.suggestions li:hover {
+  background-color: #ffffff;
+  color: #33cc66;
+  cursor: pointer;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.suggestions li:not(:last-of-type) {
+  border-bottom: 1px solid #999;
+}
+
+#friendSubmit{
+    margin-top: 100px;
+}
